# 2D-shooter

./: CMakeLists.txt  README.md  brun.sh  debug.sh  fix.sh
.cache/clangd/index/: AdjustedMultilineLabel.cpp.2D703B71AC11509C.idx  AdjustedMultilineLabel.cpp.3D15301064356CA7.idx  AdjustedMultilineLabel.h.32CEF2C70C84F548.idx  AudioDevice.hpp.180766716E1A1CC4.idx  AudioStream.hpp.3E4C6245016C4FAC.idx  AutomationEventList.hpp.89972EEC08B529D1.idx  Bench.c.E168564F8B993397.idx  BoundingBox.hpp.FB0C8BD9485DA699.idx  Bounds.cpp.734EBC13C85A0F69.idx  Bounds.h.8C2A6908EC5D9658.idx  Buoyancy.c.4536D5B31DF3107F.idx  Button.cpp.EB84A30703E641B0.idx  Button.h.9298775B3EB8EB18.idx  ButtonCallbacks.cpp.835DD437E52FB880.idx  ButtonChangePositionOnClick.cpp.6A773DF4D7F4EA85.idx  ButtonColors.cpp.6F511C7DC7914B91.idx  ButtonKeepInitialPosition.cpp.BC4D83FFD38048FE.idx  ButtonPlacement.cpp.E0418CC7D6586D67.idx  Camera2D.hpp.252E40528BD244AC.idx  Camera3D.hpp.1780CC652C7487FF.idx  Chains.c.25065558DF3FDFD2.idx  CheckBox.cpp.A5D0884EE0AB829B.idx  CheckBox.h.B0F834FD4553E62F.idx  ChildComponents.cpp.EFC663DC32FAEA7D.idx  ChipmunkDebugDraw.c.E03B169264891298.idx  ChipmunkDebugDraw.h.49AB20A878C7ED90.idx  ChipmunkDemo.c.B414A4507707A9B2.idx  ChipmunkDemo.h.6E2BB076B5F61880.idx  ChipmunkDemoTextSupport.c.F4A5A0A14C764599.idx  ChipmunkDemoTextSupport.h.5F505D3BA768B6DB.idx  Color.hpp.9CB31F5AC49B05E4.idx  ColorBarAlpha.cpp.4B1E5B5E3D9E0710.idx  ColorBarAlpha.h.33F0A1106F9E7995.idx  ColorBarHue.cpp.89B99B219CBD7B83.idx  ColorBarHue.h.2F12874C961D7F73.idx  ColorPanel.cpp.76D9E417D9E33FAC.idx  ColorPanel.h.1F52C216B8D4BCF7.idx  ColorPanelHSV.cpp.DB06E74EBED16A4B.idx  ColorPanelHSV.h.CE27DCAE3C54E90B.idx  ColorPicker.cpp.7CA2F19322072DAC.idx  (+361 more)
assets/config/: servers.json
assets/shaders/: shadow.fs
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  core.cpp  game.cpp  menu.cpp  network.cpp  physics.cpp  playable.cpp  player.cpp
src/core/include/core/: core.hpp  game.hpp  map.hpp  menu.hpp  network.h  physics.hpp  playable.hpp  player.hpp  tool.hpp
src/server/: CMakeLists.txt  console.cpp  network.cpp  server.cpp
src/server/include/server/: Console.hpp  Server.hpp  network.hpp
